# classification

./: README.md  inference.py  pyproject.toml  train.py  voc_to_cls.py
